--- a/views/index.html
+++ b/views/index.html
@@ -6,19 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./static/index.js " defer></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    
     
 </head>
 <body>
-    
+<h1 id="login">noname</h1>
 
 
-    <h1 id="login">user</h1>
 
-    <a href="/test">Тестовая кнопка </a>
-
-    
     
 </body>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    
 
 </html>
