--- a/views/welcome.html
+++ b/views/welcome.html
@@ -2,21 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./static/index.js " defer></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    
+    <script src="./static/welcome.js " ></script>
     
 </head>
 <body>
-<h1 id="login" style="color: aliceblue;">noname</h1>
-
-
-
-    
+    <a href="/app" onclick="CheckCreateUser()"> Тестовая кнопка для отрпавки json </a>
 </body>
-    
-
 </html>
