Обновил первую страницу

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,8 @@
     
 </head>
 <body>
-<h1 id="login" style="color: aliceblue;">noname</h1>
+    
+<h1 id="login" style="color: aliceblue;"></h1>
 
 
 
