--- a/views/welcome.html
+++ b/views/welcome.html
@@ -5,44 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script >
-        let tg = window.Telegram.WebApp;
+    
 
 
+    <style>
+        body {
+        background-color: #000000; /* Темно-синий фон */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        }
 
-        const data = {
-            name: tg.initDataUnsafe.user.username,
-            id: tg.initDataUnsafe.user.id ,
-            coins : 100
-        };
+        .container {
+        perspective: 1000px; /* Перспектива для 3D эффекта */
+        }
 
+        .coin {
+            width: 300px;
+            height: 300px;
+            position: relative;
+            transform-style: preserve-3d;
+            transition: transform 1s;
+            cursor: pointer;
+        }
 
-        alert(typeof(tg.initDataUnsafe.user.id ))
+        .coin div {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            font-weight: bold;
+           
+            border-radius: 50%;
+        }
 
+        .front {
+            background-color: #e2c534;
+        }
 
+        .back {
+            background-color: #f96262;
+            transform: rotateY(180deg);
+        }
 
-
-
-        fetch('/users', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(data)
-        })
-        .then(response => response.json())
-        .then(data => {
-            console.log('Успех:', data);
-        })
-        .catch((error) => {
-            console.error('Ошибка:', error);
-        });
-        
-
-    </script>
+        .coin img {
+            max-width: 200px;
+        }
+    </style>
     
 </head>
 <body>
-    <a href="/api"> Тестовая кнопка для отрпавки json </a>
+    <div class="container">
+        <div class="coin" id="coin">
+            <div class="front">
+                <img src="./static/ak47.png" alt="AK-47">
+                
+            </div>
+            <div class="back">
+                <h1>Go</h1>
+            </div>
+        </div>
+    </div>
+    <script src="./static/welcome.js"></script>
+    
 </body>
 </html>
