--- a/views/index.html
+++ b/views/index.html
@@ -11,12 +11,29 @@
     
 </head>
 <body>
+<style>
+    body{
+        background-color: azure;
+    }
+    h1{
+        color: black;
+    }
+</style>
     
 <h1 id="login" style="color: aliceblue;"></h1>
 
 
+<a onclick="random()"> Крутануть </a>
 
-    
+<p id="number"> </p>
+
+
+
+
+<a onclick="getInventory()">  Показать инвентарь</a>
+
+
+<div id="inv"></div>
 </body>
     
 
